--- a/Chengyan's personal portfolio/index.html
+++ b/Chengyan's personal portfolio/index.html
@@ -1,209 +1,183 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" href="pgstyle.css"> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <title>Chengyan's Personal Portfolio Website</title>
-    <!-- ICONSCOUT CDN -->
-    <link
-      rel="stylesheet"
-      href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css"
-    />
 
-    <!-- GOOGLE FONTS (POPPINS) -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- <link rel="stylesheet" href="pgstyle.css"> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <title>Chengyan's Personal Portfolio Website</title>
+  <!-- ICONSCOUT CDN -->
+  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css" />
 
-    <!-- STYLESHEET -->
-    <link rel="stylesheet" href="./style.css" />
-    
-  </head>
-  <body>
-    <nav>
-      <div class="container nav__container">
-        <a href="index.html" class="nav__logo">
-          <h3>Welcome!</h3>
-        </a>
+  <!-- GOOGLE FONTS (POPPINS) -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet" />
 
-        <ul class="nav__menu">
-          <li><a href="index.html">HOME</a></li>
-          <li><a href="#aboutMe">ABOUT ME</a></li>
-          <li><a href="#portfolio">PORTFOLIO</a></li>
-          <li><a href="#contact">CONTACT</a></li>
+  <!-- STYLESHEET -->
+  <link rel="stylesheet" href="./style.css" />
+
+</head>
+
+<body>
+  <nav>
+    <div class="container nav__container">
+      <a href="index.html" class="nav__logo">
+        <h3>Welcome!</h3>
+      </a>
+
+      <ul class="nav__menu">
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="#aboutMe">ABOUT ME</a></li>
+        <li><a href="#portfolio">PORTFOLIO</a></li>
+        <li><a href="#contact">CONTACT</a></li>
+        <li>
+          <a href="./images/resume.pdf" class="btn btn-primary" download><i class="uil uil-download-alt"></i> Download
+            CV</a>
+        </li>
+      </ul>
+
+      <button id="open-menu-btn"><i class="uil uil-bars"></i></button>
+      <button id="close-menu-btn"><i class="uil uil-multiply"></i></button>
+    </div>
+  </nav>
+  <!--================== END OF NAVBAR =================-->
+
+  <header>
+    <div class="container header__container">
+      <div class="header__left">
+        <div>
+          <h3>Hello There! I'm</h3>
+          <h1>Chengyan<br />Wang</h1>
+          <p>
+            I am currently a senior undergraduate student study in <b>Computer Science major/Psychology minor</b> at the Ohio State University. Feel free to check out the rest of the webpage and get to know more about me or download my resume by clicking the button on the right top corner.
+          </p>
+          <a href="#contact" class="btn btn-primary btn-lg">Get in touch</a>
+        </div>
+      </div>
+
+      <div class="header__right">
+        <div class="header__image">
+          <img
+            src="https://user-images.githubusercontent.com/69735000/195651754-901affaa-65af-44e9-95cc-63168d40bfdd.png" />
+        </div>
+        <div class="header__right-bg"></div>
+        <ul class="header__socials">
           <li>
-            <a href="./images/resume.pdf" class="btn btn-primary" download
-              ><i class="uil uil-download-alt"></i> Download CV</a
-            >
+            <a href="https://www.linkedin.com/in/wang-chengyan-1b118b218" target="_blank"><i
+                class="uil uil-linkedin"></i></a>
+          </li>
+          <li>
+            <a href="https://github.com/Yannn001?tab=repositories" target="_blank"><i
+                class="uil uil-github-alt"></i></a>
           </li>
         </ul>
-
-        <button id="open-menu-btn"><i class="uil uil-bars"></i></button>
-        <button id="close-menu-btn"><i class="uil uil-multiply"></i></button>
       </div>
-    </nav>
-    <!--================== END OF NAVBAR =================-->
+    </div>
+  </header>
+  <!--================== END OF HEADER =================-->
 
-    <header>
-      <div class="container header__container">
-        <div class="header__left">
-          <div>
-            <h3>Hello There! I'm</h3>
-            <h1>Chengyan<br />Wang</h1>
-            <p>
-              A fourth year computer science major undergraduate student and a learning to be a Full Stack Web Developer. 
-            </p>
-            <a href="#contact" class="btn btn-primary btn-lg">Get in touch</a>
-          </div>
-        </div>
-
-        <div class="header__right">
-          <div class="header__image">
-            <img src="./images/avatar.png" />
-          </div>
-          <div class="header__right-bg"></div>
-          <ul class="header__socials">
-            <li>
-              <a href="https://www.linkedin.com/in/wang-chengyan-1b118b218" target="_blank"
-                ><i class="uil uil-linkedin"></i
-              ></a>
-            </li>
-            <li>
-              <a href="https://github.com/Yannn001?tab=repositories" target="_blank"
-                ><i class="uil uil-github-alt"></i
-              ></a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </header>
-    <!--================== END OF HEADER =================-->
-
-    <section id="companies">
-      <div class="container companies__container">
-        <span><img src="./images/company1.png" /></span>
-        <!-- <span><img src="./images/company2.png" /></span>
+  <section id="companies">
+    <div class="container companies__container">
+      <span><img src="https://rep.psy.ohio-state.edu/assets/osu_logo-5be31581831fe166bdd9597ad55a23875232f5e6904ec2e85910bbbab75a3ead.png" /></span>
+      <!-- <span><img src="./images/company2.png" /></span>
         <span><img src="./images/company3.png" /></span>
         <span><img src="./images/company4.png" /></span> -->
-        <!-- <span><img src="./images/company5.png" /></span>
+      <!-- <span><img src="./images/company5.png" /></span>
         <span><img src="./images/company6.png" /></span> -->
+    </div>
+  </section>
+  <!--================== END OF COMPANIES =================-->
+
+  <section id="aboutMe">
+    <div class="container services__container">
+      <div class="services__left">
+        <h1>Learning </h1>
+      </br>
+        <h1>to understand </h1>
+      </br>
+        <h1>a little better</h1>
+      </br>
+        <h1>of this world. </h1>
       </div>
-    </section>
-    <!--================== END OF COMPANIES =================-->
 
-    <section id="aboutMe">
-      <div class="container services__container">
-        <div class="services__left">
-          <h1>Major: </h1>
-            </script>
-          <h4>Computer Information & Science</h4>
-          <h1>Minor: </h1>
-            </script>
-          <h4>General Psychology</h4>
-        </div>
+      <div class="services__right">
+        <h2>
+          Coming to Ohio State as a psychology major, I've started to realize the importance of mental health since high school. 
+          The recent project I've been working on is to try to help improve the mental wellness of Chinese international students 
+          here at the Ohio State University. Please feel free to check it out, it is the second project in my profolio section.
+        </br>
+        </h2>
+        <div class="services__cards">
+          <div class="services__card">
+            <span class="services__card-icon"><i class="uil uil-layers-alt"></i></span>
+            <h5>Skills</h5>
+            <a href="#skills">Pending... <i class="uil uil-arrow-right"></i></a>
+          </div>
 
-        <div class="services__right">
-          <h2>
-            <b>My goal</b> is to use what I have learned to help Asian/Asian Americans thrive in mental wellness, including building website and programs around mental health resources and holding reading club.
-          </h2>
-          <div class="services__cards">
-            <div class="services__card">
-              <span class="services__card-icon"
-                ><i class="uil uil-layers-alt"></i
-              ></span>
-              <h5>Skills</h5>
-              <a href="#skills">Discover More <i class="uil uil-arrow-right"></i></a>
-            </div>
+          <div class="services__card">
+            <span class="services__card-icon"><i class="uil uil-browser"></i></span>
+            <h5>Courses Taken</h5>
+            <a href="#course">Pending... <i class="uil uil-arrow-right"></i></a>
+          </div>
 
-            <div class="services__card">
-              <span class="services__card-icon"
-                ><i class="uil uil-browser"></i
-              ></span>
-              <h5>Courses Taken</h5>
-              <a href="#course">Discover More <i class="uil uil-arrow-right"></i></a>
-            </div>
-
-            <div class="services__card">
-              <span class="services__card-icon"
-                ><i class="uil uil-lightbulb"></i
-              ></span>
-              <h5>Interests</h5>
-              <a href="#interest">Discover More <i class="uil uil-arrow-right"></i></a>
-            </div>
+          <div class="services__card">
+            <span class="services__card-icon"><i class="uil uil-lightbulb"></i></span>
+            <h5>Interests</h5>
+            <a href="#interest">Pending... <i class="uil uil-arrow-right"></i></a>
           </div>
         </div>
       </div>
-    </section>
-    <!--================== END OF ABOUT ME =================-->
+    </div>
+  </section>
+  <!--================== END OF ABOUT ME =================-->
 
-    <section id="portfolio">
-      <div class="container portfolio__container">
-        <div class="portfolio__head">
-          <h1>Portfolio</h1>
-          <div class="portfolio__head-right">
-            <p>
-              Here are some examples of my website
-            </p>
-            <a href="https://github.com/Yannn001?tab=repositories">Explore More <i class="uil uil-arrow-right"></i></a>
-          </div>
+  <section id="portfolio">
+    <div class="container portfolio__container">
+      <div class="portfolio__head">
+        <h1>Portfolio</h1>
+        <div class="portfolio__head-right">
+          <p>
+            Here are some examples of my website
+          </p>
+          <a href="https://github.com/Yannn001?tab=repositories">Explore More <i class="uil uil-arrow-right"></i></a>
         </div>
+      </div>
 
-        <div class="portfolio__projects">
-          <article class="portfolio__project">
-            <span class="portfolio__project-image"
-              ><img src="./images/project1.png"
-            /></span>
-            <div class="portfolio__cta">
-              <a href="https://github.com/Yannn001/task_manager" class="btn" target="_blank"
-                >Github</a
-              >
-              <!-- <a
+      <div class="portfolio__projects">
+        <article class="portfolio__project">
+          <span class="portfolio__project-image"><img src="./images/project1.png" /></span>
+          <div class="portfolio__cta">
+            <a href="https://github.com/Yannn001/task_manager" class="btn" target="_blank">Github</a>
+            <!-- <a
                 href="https://behance.net"
                 class="btn btn-primary"
                 target="_blank"
                 >Live Demo</a
               > -->
-            </div>
-          </article>
-          <article class="portfolio__project">
-            <span class="portfolio__project-image"
-              ><img src="./images/project2.png"
-            /></span>
-            <div class="portfolio__cta">
-              <a href="https://github.com/Yannn001/CPCOH" class="btn" target="_blank"
-                >Github</a
-              >
-              <!-- <a
-                href="https://behance.net"
-                class="btn btn-primary"
-                target="_blank"
-                >Live Demo</a
-              > -->
-            </div>
-          </article>
-          <!-- <article class="portfolio__project">
-            <span class="portfolio__project-image"
-              ><img src="./images/project3.jpg"
-            /></span>
-            <div class="portfolio__cta">
-              <a href="https://github.com" class="btn" target="_blank"
-                >Github</a
-              >
-              <a
-                href="https://behance.net"
-                class="btn btn-primary"
-                target="_blank"
-                >Live Demo</a
-              >
-            </div>
-          </article>
-          <article class="portfolio__project">
+          </div>
+        </article>
+        <article class="portfolio__project">
+          <span class="portfolio__project-image"><img src="./images/project2.png" /></span>
+          <div class="portfolio__cta">
+            <a href="https://github.com/Yannn001/CPCOH" class="btn" target="_blank">Github</a>
+            <a href="https://go.osu.edu/cspc" class="btn btn-primary" target="_blank">Live Demo</a>
+            <a class="portfolio__cta" target="_blank"><b>Pending</b></a>
+          </div>
+        </article>
+        <article class="portfolio__project">
+          <span class="portfolio__project-image"><img
+              src="https://user-images.githubusercontent.com/69735000/195641149-3883fc6f-c229-4a03-8334-b1f4048dfdc9.png" /></span>
+          <div class="portfolio__cta">
+            <a href="https://github.com/Yannn001/2022HackOHI-O" class="btn" target="_blank">Github</a>
+            <a href="https://go.osu.edu/hackO-3" class="btn btn-primary" target="_blank">Live Demo</a>
+            <a class="portfolio__cta" target="_blank"><b>Pending</b></a>
+          </div>
+        </article>
+        <!-- <article class="portfolio__project">
             <span class="portfolio__project-image"
               ><img src="./images/project4.jpg"
             /></span>
@@ -219,35 +193,30 @@
               >
             </div>
           </article> -->
-        </div>
       </div>
-    </section>
-    <!--================== END OF PORTFOLIO =================-->
+    </div>
+  </section>
+  <!--================== END OF PORTFOLIO =================-->
 
-    <!-- <section id="skills">
-      <h1>Pending(skills)</h1>
-      <div class="progress-bar" style="--width: 5" data-label="Javascript"></div>
-    </section> -->
-    <!--================== END OF SKILLS =================-->
 
-    <!-- <section id="course">
+  <!-- <section id="course">
       <h1>Pending(course)</h1>
     </section> -->
-    <!--================== END OF COURSE =================-->
+  <!--================== END OF COURSE =================-->
 
-    <!-- <section id="interest">
+  <!-- <section id="interest">
       <h1>Pending(interest)</h1>
     </section> -->
-    <!--================== END OF INTEREST =================-->
+  <!--================== END OF INTEREST =================-->
 
-    <!-- <section id="testimonials">
+  <!-- <section id="testimonials">
       <h2>What Our Clients Say</h2>
       <p class="lead">
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab tempora
         iure expedita cumque dicta consequatur.
       </p>
       <div class="container testimonials__container"> -->
-        <!-- <article class="testimonial">
+  <!-- <article class="testimonial">
                 <p>
                     "our company, we do ongoing research with our target audience. This includes 30-45 minute phone interviews. It was difficult to conduct the interview, really listen, and ask good follow up questions."
                 </p>
@@ -261,53 +230,48 @@
                     </div>
                 </div>
             </article> -->
-      <!-- </div>
+  <!-- </div>
     </section> -->
-    <!--================== END OF TESTIMONIALS =================-->
-    
+  <!--================== END OF TESTIMONIALS =================-->
 
-    <section id="contact">
-      <div class="container contact__container">
-        <div class="contact__left">
-          <h2>Let's Talk</h2>
-          <p>
-            Hi, thank you for visiting my website, if you would like to contact me, feel free to leave you name, email, and a short message here. I will get back to you as soon as possible.
-          </p>
-          <ul class="contact__socials">
-            <li>
-              <a href="https://www.linkedin.com/in/wang-chengyan-1b118b218" target="_blank"
-                ><i class="uil uil-linkedin"></i
-              ></a>
-            </li>
-            <li>
-              <a href="https://github.com/Yannn001?tab=repositories" target="_blank"
-                ><i class="uil uil-github-alt"></i
-              ></a>
-            </li>
-          </ul>
-        </div>
 
-        <form action="https://formspree.io/f/mdojkwkr" method="POST">
-          <input type="text" name="name" placeholder="Your Name" required />
-          <input type="email" name="email" placeholder="Your Email" required />
-          <textarea
-            name="message"
-            rows="6"
-            placeholder="Message"
-            required
-          ></textarea>
-          <button type="submit" class="btn">
-            Send <i class="uil uil-arrow-right"></i>
-          </button>
-        </form>
+  <section id="contact">
+    <div class="container contact__container">
+      <div class="contact__left">
+        <h2>Let's Talk</h2>
+        <p>
+          Hi, thank you for visiting my website, if you would like to contact me, feel free to leave you name, email,
+          and a short message here. I will get back to you as soon as possible.
+        </p>
+        <ul class="contact__socials">
+          <li>
+            <a href="https://www.linkedin.com/in/wang-chengyan-1b118b218" target="_blank"><i
+                class="uil uil-linkedin"></i></a>
+          </li>
+          <li>
+            <a href="https://github.com/Yannn001?tab=repositories" target="_blank"><i
+                class="uil uil-github-alt"></i></a>
+          </li>
+        </ul>
       </div>
-    </section>
 
-    <footer>
-      <small> Copyright &copy; Chengyan Wang's Personal Portfolio </small>
-    </footer>
+      <form action="https://formspree.io/f/mdojkwkr" method="POST">
+        <input type="text" name="name" placeholder="Your Name" required />
+        <input type="email" name="email" placeholder="Your Email" required />
+        <textarea name="message" rows="6" placeholder="Message" required></textarea>
+        <button type="submit" class="btn">
+          Send <i class="uil uil-arrow-right"></i>
+        </button>
+      </form>
+    </div>
+  </section>
 
-    <script src="./testimonials.js"></script>
-    <script src="./main.js"></script>
-  </body>
+  <footer>
+    <small> Copyright &copy; Chengyan Wang's Personal Portfolio </small>
+  </footer>
+
+  <script src="./testimonials.js"></script>
+  <script src="./main.js"></script>
+</body>
+
 </html>
