--- a/Chengyan's personal portfolio/index.html
+++ b/Chengyan's personal portfolio/index.html
@@ -36,7 +36,7 @@
         <li><a href="#contact">CONTACT</a></li>
         <li>
           <a href="./images/resume.pdf" class="btn btn-primary" download><i class="uil uil-download-alt"></i> Download
-            CV</a>
+            Resume</a>
         </li>
       </ul>
 
@@ -177,22 +177,18 @@
             <a class="portfolio__cta" target="_blank"><b>Pending</b></a>
           </div>
         </article>
-        <!-- <article class="portfolio__project">
+
+        <article class="portfolio__project">
             <span class="portfolio__project-image"
-              ><img src="./images/project4.jpg"
+              ><img src="https://user-images.githubusercontent.com/69735000/195725169-98a1722f-4358-4571-8298-210cc2b06c29.png"
             /></span>
             <div class="portfolio__cta">
-              <a href="https://github.com" class="btn" target="_blank"
+              <a href="https://dev.azure.com/dalal55/_git/HelloWorld" class="btn" target="_blank"
                 >Github</a
               >
-              <a
-                href="https://behance.net"
-                class="btn btn-primary"
-                target="_blank"
-                >Live Demo</a
-              >
+              <a class="portfolio__cta" target="_blank"><b>Pending</b></a>
             </div>
-          </article> -->
+          </article>
       </div>
     </div>
   </section>
