--- a/Chengyan's personal portfolio/index.html
+++ b/Chengyan's personal portfolio/index.html
@@ -35,7 +35,7 @@
         <li><a href="#portfolio">PORTFOLIO</a></li>
         <li><a href="#contact">CONTACT</a></li>
         <li>
-          <a href="./images/resume.pdf" class="btn btn-primary" download><i class="uil uil-download-alt"></i> Download
+          <a href="./images/Chengyan_Wang_resume.pdf" class="btn btn-primary" download><i class="uil uil-download-alt"></i> Download
             Resume</a>
         </li>
       </ul>
@@ -62,7 +62,7 @@
       <div class="header__right">
         <div class="header__image">
           <img
-            src="https://user-images.githubusercontent.com/69735000/195651754-901affaa-65af-44e9-95cc-63168d40bfdd.png" />
+            src="https://user-images.githubusercontent.com/69735000/211344977-561853c6-1824-4e1e-963d-00f28cde90b2.png" style="width:350px; margin-left: 80px;"/>
         </div>
         <div class="header__right-bg"></div>
         <ul class="header__socials">
@@ -95,20 +95,17 @@
   <section id="aboutMe">
     <div class="container services__container">
       <div class="services__left">
-        <h1>Learning </h1>
-      </br>
-        <h1>to understand </h1>
-      </br>
-        <h1>a little better</h1>
-      </br>
-        <h1>of this world. </h1>
+        <h1>Stay <br>hungry, <br>stay <br>foolish.</h1>
       </div>
 
       <div class="services__right">
         <h2>
-          Coming to Ohio State as a psychology major, I've started to realize the importance of mental health since high school. 
-          The recent project I've been working on is to try to help improve the mental wellness of Chinese international students 
-          here at the Ohio State University. Please feel free to check it out, it is the second project in my profolio section.
+          As a Chinese international student pursuing a degree in computer science, 
+          I have been diligently cultivating my proficiency in the field of coding for the past three years. 
+          Through the development of various web applications and 2D games, 
+          I have honed my skills and expanded my understanding of the intricacies of software development. 
+          As I approach the culmination of my studies at Ohio State University in May 2023, 
+          I am eager to apply my expertise by seeking employment opportunities in the industry.
         </br>
         </h2>
         <div class="services__cards">
@@ -141,9 +138,9 @@
         <h1>Portfolio</h1>
         <div class="portfolio__head-right">
           <p>
-            Here are some examples of my website
+            Here are some examples of my websites and 2D games.
           </p>
-          <a href="https://github.com/Yannn001?tab=repositories">Explore More <i class="uil uil-arrow-right"></i></a>
+          <a href="https://github.com/Yannn001?tab=repositories">Check out my github <i class="uil uil-arrow-right"></i></a>
         </div>
       </div>
 
@@ -161,16 +158,16 @@
           </div>
         </article>
         <article class="portfolio__project">
-          <span class="portfolio__project-image"><img src="./images/project2.png" /></span>
+          <span class="portfolio__project-image"><img src="https://raw.githubusercontent.com/Yannn001/personal-portfolio/main/Chengyan's%20personal%20portfolio/images/projectDAB.png" /></span>
           <div class="portfolio__cta">
-            <a href="https://github.com/Yannn001/CPCOH" class="btn" target="_blank">Github</a>
-            <a href="https://go.osu.edu/cspc" class="btn btn-primary" target="_blank">Live Demo</a>
+            <a href="https://github.com/Yannn001/DABWebisteDev" class="btn" target="_blank">Github</a>
+            <a href="https://go.osu.edu/dabdemo" class="btn btn-primary" target="_blank">Live Demo</a>
             <a class="portfolio__cta" target="_blank"><b>Pending</b></a>
           </div>
         </article>
         <article class="portfolio__project">
           <span class="portfolio__project-image"><img
-              src="https://user-images.githubusercontent.com/69735000/195641149-3883fc6f-c229-4a03-8334-b1f4048dfdc9.png" /></span>
+              src="https://raw.githubusercontent.com/Yannn001/personal-portfolio/main/Chengyan's%20personal%20portfolio/images/projectHonda.png" /></span>
           <div class="portfolio__cta">
             <a href="https://github.com/Yannn001/2022HackOHI-O" class="btn" target="_blank">Github</a>
             <a href="https://go.osu.edu/hackO-3" class="btn btn-primary" target="_blank">Live Demo</a>
@@ -180,13 +177,13 @@
 
         <article class="portfolio__project">
             <span class="portfolio__project-image"
-              ><img src="https://user-images.githubusercontent.com/69735000/195725169-98a1722f-4358-4571-8298-210cc2b06c29.png"
+              ><img src="https://raw.githubusercontent.com/Yannn001/personal-portfolio/main/Chengyan's%20personal%20portfolio/images/ezgif-4-fb7ff1fb4e.gif"
             /></span>
             <div class="portfolio__cta">
               <a href="https://dev.azure.com/dalal55/_git/HelloWorld" class="btn" target="_blank"
                 >Github</a
               >
-              <a class="portfolio__cta" target="_blank"><b>Pending</b></a>
+              <a class="portfolio__cta" target="_blank"></a>
             </div>
           </article>
       </div>
