--- a/Chengyan's personal portfolio/index.html
+++ b/Chengyan's personal portfolio/index.html
@@ -62,7 +62,7 @@
       <div class="header__right">
         <div class="header__image">
           <img
-            src="https://user-images.githubusercontent.com/69735000/211344977-561853c6-1824-4e1e-963d-00f28cde90b2.png" style="width:350px; margin-left: 80px;"/>
+            src="https://user-images.githubusercontent.com/69735000/211344977-561853c6-1824-4e1e-963d-00f28cde90b2.png" style="width:56%; margin-left: 80px;"/>
         </div>
         <div class="header__right-bg"></div>
         <ul class="header__socials">
