--- a/Chengyan's personal portfolio/index.html
+++ b/Chengyan's personal portfolio/index.html
@@ -35,7 +35,8 @@
         <li><a href="#portfolio">PORTFOLIO</a></li>
         <li><a href="#contact">CONTACT</a></li>
         <li>
-          <a href="./images/Chengyan_Wang_resume.pdf" class="btn btn-primary" download><i class="uil uil-download-alt"></i> Download
+          <a href="./images/Chengyan_Wang_resume.pdf" class="btn btn-primary" download><i
+              class="uil uil-download-alt"></i> Download
             Resume</a>
         </li>
       </ul>
@@ -53,7 +54,9 @@
           <h3>Hello There! I'm</h3>
           <h1>Chengyan<br />Wang</h1>
           <p>
-            I am currently a senior undergraduate student study in <b>Computer Science major/Psychology minor</b> at the Ohio State University. Feel free to check out the rest of the webpage and get to know more about me or download my resume by clicking the button on the right top corner.
+            I am currently a senior undergraduate student study in <b>Computer Science major/Psychology minor</b> at the
+            Ohio State University. Feel free to check out the rest of the webpage and get to know more about me or
+            download my resume by clicking the button on the right top corner.
           </p>
           <a href="#contact" class="btn btn-primary btn-lg">Get in touch</a>
         </div>
@@ -62,7 +65,8 @@
       <div class="header__right">
         <div class="header__image">
           <img
-            src="https://user-images.githubusercontent.com/69735000/211344977-561853c6-1824-4e1e-963d-00f28cde90b2.png" style="width:56%; margin-left: 80px;"/>
+            src="https://user-images.githubusercontent.com/69735000/211344977-561853c6-1824-4e1e-963d-00f28cde90b2.png"
+            style="width:56%; margin-left: 80px;" />
         </div>
         <div class="header__right-bg"></div>
         <ul class="header__socials">
@@ -82,7 +86,8 @@
 
   <section id="companies">
     <div class="container companies__container">
-      <span><img src="https://rep.psy.ohio-state.edu/assets/osu_logo-5be31581831fe166bdd9597ad55a23875232f5e6904ec2e85910bbbab75a3ead.png" /></span>
+      <span><img
+          src="https://rep.psy.ohio-state.edu/assets/osu_logo-5be31581831fe166bdd9597ad55a23875232f5e6904ec2e85910bbbab75a3ead.png" /></span>
       <!-- <span><img src="./images/company2.png" /></span>
         <span><img src="./images/company3.png" /></span>
         <span><img src="./images/company4.png" /></span> -->
@@ -100,13 +105,13 @@
 
       <div class="services__right">
         <h2>
-          As a Chinese international student pursuing a degree in computer science, 
-          I have been diligently cultivating my proficiency in the field of coding for the past three years. 
-          Through the development of various web applications and 2D games, 
-          I have honed my skills and expanded my understanding of the intricacies of software development. 
-          As I approach the culmination of my studies at Ohio State University in May 2023, 
+          As a Chinese international student pursuing a degree in computer science,
+          I have been diligently cultivating my proficiency in the field of coding for the past three years.
+          Through the development of various web applications and 2D games,
+          I have honed my skills and expanded my understanding of the intricacies of software development.
+          As I approach the culmination of my studies at Ohio State University in May 2023,
           I am eager to apply my expertise by seeking employment opportunities in the industry.
-        </br>
+          </br>
         </h2>
         <div class="services__cards">
           <div class="services__card">
@@ -140,7 +145,8 @@
           <p>
             Here are some examples of my websites and 2D games.
           </p>
-          <a href="https://github.com/Yannn001?tab=repositories">Check out my github <i class="uil uil-arrow-right"></i></a>
+          <a href="https://github.com/Yannn001?tab=repositories">Check out my github <i
+              class="uil uil-arrow-right"></i></a>
         </div>
       </div>
 
@@ -158,7 +164,8 @@
           </div>
         </article>
         <article class="portfolio__project">
-          <span class="portfolio__project-image"><img src="https://raw.githubusercontent.com/Yannn001/personal-portfolio/main/Chengyan's%20personal%20portfolio/images/projectDAB.png" /></span>
+          <span class="portfolio__project-image"><img
+              src="https://raw.githubusercontent.com/Yannn001/personal-portfolio/main/Chengyan's%20personal%20portfolio/images/projectDAB.png" /></span>
           <div class="portfolio__cta">
             <a href="https://github.com/Yannn001/DABWebisteDev" class="btn" target="_blank">Github</a>
             <a href="https://go.osu.edu/dabdemo" class="btn btn-primary" target="_blank">Live Demo</a>
@@ -176,16 +183,22 @@
         </article>
 
         <article class="portfolio__project">
-            <span class="portfolio__project-image"
-              ><img src="https://raw.githubusercontent.com/Yannn001/personal-portfolio/main/Chengyan's%20personal%20portfolio/images/ezgif-4-fb7ff1fb4e.gif"
-            /></span>
-            <div class="portfolio__cta">
-              <a href="https://dev.azure.com/dalal55/_git/HelloWorld" class="btn" target="_blank"
-                >Github</a
-              >
-              <a class="portfolio__cta" target="_blank"></a>
-            </div>
-          </article>
+          <span class="portfolio__project-image"><img
+              src="https://raw.githubusercontent.com/Yannn001/personal-portfolio/main/Chengyan's%20personal%20portfolio/images/ezgif-4-fb7ff1fb4e.gif" /></span>
+          <div class="portfolio__cta">
+            <a href="https://dev.azure.com/dalal55/_git/HelloWorld" class="btn" target="_blank">Github</a>
+            <a class="portfolio__cta" target="_blank"></a>
+          </div>
+        </article>
+
+        <article class="portfolio__project">
+          <span class="portfolio__project-image"><img
+              src="https://user-images.githubusercontent.com/69735000/220668071-a319650c-b5e5-4dad-a41d-3580026a9f9b.jpg" /></span>
+          <div class="portfolio__cta">
+            <a href="https://github.com/Yannn001/Set-Game" class="btn" target="_blank">Github</a>
+            <a href="https://yannn001.github.io/Set-Game/" class="btn btn-primary" target="_blank">Live Demo</a>
+          </div>
+        </article>
       </div>
     </div>
   </section>
