--- a/Chengyan's personal portfolio/index.html
+++ b/Chengyan's personal portfolio/index.html
@@ -188,7 +188,7 @@
           <span class="portfolio__project-image"><img
               src="https://raw.githubusercontent.com/Yannn001/personal-portfolio/main/Chengyan's%20personal%20portfolio/images/ezgif-4-fb7ff1fb4e.gif" /></span>
           <div class="portfolio__cta">
-            <a href="https://dev.azure.com/dalal55/_git/HelloWorld" class="btn" target="_blank">Github</a>
+            <a href="https://github.com/Yannn001/King-Of-The-Crown-KOTC-Multiplayer-Mario-Game.git" class="btn" target="_blank">Github</a>
             <a class="portfolio__cta" target="_blank"></a>
           </div>
         </article>
