--- a/Chengyan's personal portfolio/index.html
+++ b/Chengyan's personal portfolio/index.html
@@ -154,6 +154,7 @@
 
       <div class="portfolio__projects">
         <article class="portfolio__project">
+          <a style ="font-weight: 600;">To-do List Web App </a>
           <span class="portfolio__project-image"><img src="./images/project1.png" /></span>
           <div class="portfolio__cta">
             <a href="https://github.com/Yannn001/task_manager" class="btn" target="_blank">Github</a>
@@ -166,6 +167,7 @@
           </div>
         </article>
         <article class="portfolio__project">
+          <a style ="font-weight: 600;">ICICLE Digital Agriculture Build Team Website</a>
           <span class="portfolio__project-image"><img
               src="https://raw.githubusercontent.com/Yannn001/personal-portfolio/main/Chengyan's%20personal%20portfolio/images/projectDAB.png" /></span>
           <div class="portfolio__cta">
@@ -175,6 +177,7 @@
           </div>
         </article>
         <article class="portfolio__project">
+          <a style ="font-weight: 600;">2022 HackOHI-O</a>
           <span class="portfolio__project-image"><img
               src="https://raw.githubusercontent.com/Yannn001/personal-portfolio/main/Chengyan's%20personal%20portfolio/images/projectHonda.png" /></span>
           <div class="portfolio__cta">
@@ -185,6 +188,7 @@
         </article>
 
         <article class="portfolio__project">
+          <a style ="font-weight: 600;">King Of The Crown Multiplayer Mario Game</a>
           <span class="portfolio__project-image"><img
               src="https://raw.githubusercontent.com/Yannn001/personal-portfolio/main/Chengyan's%20personal%20portfolio/images/ezgif-4-fb7ff1fb4e.gif" /></span>
           <div class="portfolio__cta">
@@ -194,6 +198,7 @@
         </article>
 
         <article class="portfolio__project">
+          <a style ="font-weight: 600;">Set Game</a>
           <span class="portfolio__project-image"><img
               src="https://user-images.githubusercontent.com/69735000/220668071-a319650c-b5e5-4dad-a41d-3580026a9f9b.jpg" /></span>
           <div class="portfolio__cta">
@@ -202,10 +207,20 @@
           </div>
         </article>
         <article class="portfolio__project">
+          <a style ="font-weight: 600;">Mobile chat bot with memory</a>
           <span class="portfolio__project-image">
             <img src="images/android.gif" style="max-height: 100%; width: 100%;" /></span>
           <div class="portfolio__cta">
             <a href="https://github.com/Yannn001/Mobile-chat-bot-with-memory" class="btn" target="_blank">Github</a>
+          </div>
+        </article>
+       
+        <article class="portfolio__project">
+          <a style ="font-weight: 600;">Rails Student Management System</a>
+          <span class="portfolio__project-image">
+            <img src="images/rails.gif" style="max-height: 100%; width: 100%;" /></span>
+          <div class="portfolio__cta">
+            <a href="https://github.com/Yannn001/Rails-Student-Management-System" class="btn" target="_blank">Github</a>
           </div>
         </article>
       </div>
