--- a/Chengyan's personal portfolio/index.html
+++ b/Chengyan's personal portfolio/index.html
@@ -97,47 +97,6 @@
         <span><img src="./images/company6.png" /></span> -->
     </div>
   </section>
-  <!--================== END OF COMPANIES =================-->
-
-  <section id="aboutMe">
-    <div class="container services__container">
-      <div class="services__left">
-        <h1>Stay <br>hungry, <br>stay <br>foolish.</h1>
-      </div>
-
-      <div class="services__right">
-        <h2>
-          As a Chinese international student pursuing a degree in computer science,
-          I have been diligently cultivating my proficiency in the field of coding for the past three years.
-          Through the development of various web applications and 2D games,
-          I have honed my skills and expanded my understanding of the intricacies of software development.
-          As I approach the culmination of my studies at Ohio State University in May 2023,
-          I am eager to apply my expertise by seeking employment opportunities in the industry.
-          </br>
-        </h2>
-        <div class="services__cards">
-          <div class="services__card">
-            <span class="services__card-icon"><i class="uil uil-layers-alt"></i></span>
-            <h5>Skills</h5>
-            <a href="#skills">Pending... <i class="uil uil-arrow-right"></i></a>
-          </div>
-
-          <div class="services__card">
-            <span class="services__card-icon"><i class="uil uil-browser"></i></span>
-            <h5>Courses Taken</h5>
-            <a href="#course">Pending... <i class="uil uil-arrow-right"></i></a>
-          </div>
-
-          <div class="services__card">
-            <span class="services__card-icon"><i class="uil uil-lightbulb"></i></span>
-            <h5>Interests</h5>
-            <a href="#interest">Pending... <i class="uil uil-arrow-right"></i></a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!--================== END OF ABOUT ME =================-->
 
   <section id="portfolio">
     <div class="container portfolio__container">
@@ -207,7 +166,7 @@
           </div>
         </article>
         <article class="portfolio__project">
-          <a style ="font-weight: 600;">Mobile chat bot with memory</a>
+          <a style ="font-weight: 600;">Mobile Chat Bot With Memory</a>
           <span class="portfolio__project-image">
             <img src="images/android.gif" style="max-height: 100%; width: 100%;" /></span>
           <div class="portfolio__cta">
@@ -227,44 +186,6 @@
     </div>
   </section>
   <!--================== END OF PORTFOLIO =================-->
-
-
-  <!-- <section id="course">
-      <h1>Pending(course)</h1>
-    </section> -->
-  <!--================== END OF COURSE =================-->
-
-  <!-- <section id="interest">
-      <h1>Pending(interest)</h1>
-    </section> -->
-  <!--================== END OF INTEREST =================-->
-
-  <!-- <section id="testimonials">
-      <h2>What Our Clients Say</h2>
-      <p class="lead">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab tempora
-        iure expedita cumque dicta consequatur.
-      </p>
-      <div class="container testimonials__container"> -->
-  <!-- <article class="testimonial">
-                <p>
-                    "our company, we do ongoing research with our target audience. This includes 30-45 minute phone interviews. It was difficult to conduct the interview, really listen, and ask good follow up questions."
-                </p>
-                <div class="testimonial__client">
-                    <span class="avatar">
-                        <img src="./images/avatar1.jpg">
-                    </span>
-                    <div class="testimonial__work">
-                        <p><b>Diana Ayi</b></p>
-                        <small>Musician</small>
-                    </div>
-                </div>
-            </article> -->
-  <!-- </div>
-    </section> -->
-  <!--================== END OF TESTIMONIALS =================-->
-
-
   <section id="contact">
     <div class="container contact__container">
       <div class="contact__left">
