--- a/index.html
+++ b/index.html
@@ -60,13 +60,28 @@
             <h3>Hello There! I'm</h3>
             <h1>Chengyan<br />Wang</h1>
             <p>
-              Hi, I'm Chengyan Wang. I have recently completed my journey as a
-             undergraduate student at The Ohio State University, where I
-              pursued a major in Computer Science and a minor in Psychology. I
-              invite you to explore the rest of this webpage to get a better
-              sense of who I am. You can also download my resume by clicking on
-              the button in the top right corner.
+              A newly graduated <strong>Full-Stack Web Developer</strong> with a
+              Cum Laude distinction from The Ohio State University, passionate
+              about bridging technology and innovation. Discover my skills,
+              projects, and accomplishments - download my resume from the top
+              right corner!
             </p>
+            <!-- <p>
+              Hi, I'm Chengyan Wang. My experience includes leading full-stack
+              development projects, such as the <b>ICICLE Website</b> and the
+              <b>Rails Student Management System</b>. I implemented cutting-edge
+              technologies and frameworks, including
+              <b>OAuth OpenID protocol</b> , <b>Ruby on Rails</b> , and
+              <b>MVC</b>MVC architecture, showcasing my ability to create
+              secure, user-friendly web platforms.
+            </p>
+            <p>
+              My commitment to seamless user experience and project management
+              underlines my competence in this field. Please feel free to
+              explore my LinkedIn profile and Github account for a deeper
+              understanding of my capabilities. You can download my resume by
+              clicking the button in the top right corner."
+            </p> -->
             <a href="#contact" class="btn btn-primary btn-lg">Get in touch</a>
           </div>
         </div>
@@ -82,14 +97,14 @@
           <ul class="header__socials">
             <li>
               <a
-                href="https://www.linkedin.com/in/wang-chengyan-1b118b218"
+                href="https://www.linkedin.com/in/w-chengyan-1b118b218/"
                 target="_blank"
                 ><i class="uil uil-linkedin"></i
               ></a>
             </li>
             <li>
               <a
-                href="https://github.com/Yannn001?tab=repositories"
+                href="https://github.com/ChengyanOo"
                 target="_blank"
                 ><i class="uil uil-github-alt"></i
               ></a>
@@ -100,27 +115,31 @@
     </header>
     <!--================== END OF HEADER =================-->
 
-    <section id="companies">
+    <!-- <section id="companies">
       <div class="container companies__container">
         <span
           ><img
             src="https://rep.psy.ohio-state.edu/assets/osu_logo-5be31581831fe166bdd9597ad55a23875232f5e6904ec2e85910bbbab75a3ead.png"
         /></span>
-        <!-- <span><img src="./images/company2.png" /></span>
-        <span><img src="./images/company3.png" /></span>
-        <span><img src="./images/company4.png" /></span> -->
-        <!-- <span><img src="./images/company5.png" /></span>
-        <span><img src="./images/company6.png" /></span> -->
       </div>
-    </section>
+    </section> -->
 
     <section id="portfolio">
       <div class="container portfolio__container">
         <div class="portfolio__head">
-          <h1>Portfolio</h1>
+          <h1>Projects</h1>
           <div class="portfolio__head-right">
-            <p>Here are some examples of my websites and 2D games.</p>
-            <a href="https://github.com/Yannn001?tab=repositories"
+            <p>
+              Explore my portfolio, showcasing standout projects like the
+              <b>ICICLE Website</b> and the
+              <b>Rails Student Management System</b>. These full-stack
+              development undertakings demonstrate my adept utilization of
+              cutting-edge technologies and frameworks. I've implemented the
+              <b>OAuth OpenID protocol</b>, leveraged <b>Ruby on Rails</b>, and
+              applied <b>MVC architecture</b>, manifesting my competence in
+              creating secure, intuitive web platforms.
+            </p>
+            <a href="https://github.com/ChengyanOo"
               >Check out my github <i class="uil uil-arrow-right"></i
             ></a>
           </div>
@@ -128,42 +147,21 @@
 
         <div class="portfolio__projects">
           <article class="portfolio__project">
-            <a style="font-weight: 600">To-do List Web App </a>
-            <span class="portfolio__project-image"
-              ><img src="./images/project1.png"
-            /></span>
-            <div class="portfolio__cta">
-              <a
-                href="https://github.com/Yannn001/task_manager"
-                class="btn"
-                target="_blank"
-                >Github</a
-              >
-              <!-- <a
-                href="https://behance.net"
-                class="btn btn-primary"
-                target="_blank"
-                >Live Demo</a
-              > -->
-            </div>
-          </article>
-          <article class="portfolio__project">
             <a style="font-weight: 600"
               >ICICLE Digital Agriculture Build Team Website</a
             >
             <span class="portfolio__project-image"
-              ><img
-                src="https://raw.githubusercontent.com/Yannn001/personal-portfolio/main/Chengyan's%20personal%20portfolio/images/projectDAB.png"
+              ><img src="./images/projectDAB.png"
             /></span>
             <div class="portfolio__cta">
               <a
-                href="https://github.com/Yannn001/DABWebisteDev"
+                href="https://github.com/ChengyanOo/DABWebisteDev"
                 class="btn"
                 target="_blank"
                 >Github</a
               >
               <a
-                href="https://go.osu.edu/dabdemo"
+                href="https://chengyanoo.github.io/DABWebisteDev/"
                 class="btn btn-primary"
                 target="_blank"
                 >Live Demo</a
@@ -174,18 +172,17 @@
           <article class="portfolio__project">
             <a style="font-weight: 600">2022 HackOHI-O</a>
             <span class="portfolio__project-image"
-              ><img
-                src="https://raw.githubusercontent.com/Yannn001/personal-portfolio/main/Chengyan's%20personal%20portfolio/images/projectHonda.png"
+              ><img src="./images/projectHonda.png"
             /></span>
             <div class="portfolio__cta">
               <a
-                href="https://github.com/Yannn001/2022HackOHI-O"
+                href="https://github.com/ChengyanOo/2022HackOHI-O"
                 class="btn"
                 target="_blank"
                 >Github</a
               >
               <a
-                href="https://go.osu.edu/hackO-3"
+                href="https://chengyanoo.github.io/2022HackOHI-O/"
                 class="btn btn-primary"
                 target="_blank"
                 >Live Demo</a
@@ -199,12 +196,11 @@
               >King Of The Crown Multiplayer Mario Game</a
             >
             <span class="portfolio__project-image"
-              ><img
-                src="https://raw.githubusercontent.com/Yannn001/personal-portfolio/main/Chengyan's%20personal%20portfolio/images/ezgif-4-fb7ff1fb4e.gif"
+              ><img src="./images/MarioGame.gif"
             /></span>
             <div class="portfolio__cta">
               <a
-                href="https://github.com/Yannn001/King-Of-The-Crown-KOTC-Multiplayer-Mario-Game.git"
+                href="https://github.com/ChengyanOo/King-Of-The-Crown-KOTC-Multiplayer-Mario-Game.git"
                 class="btn"
                 target="_blank"
                 >Github</a
@@ -221,13 +217,13 @@
             /></span>
             <div class="portfolio__cta">
               <a
-                href="https://github.com/Yannn001/Set-Game"
+                href="https://github.com/ChengyanOo/Set-Game"
                 class="btn"
                 target="_blank"
                 >Github</a
               >
               <a
-                href="https://yannn001.github.io/Set-Game/"
+                href="https://chengyanOo.github.io/Set-Game/"
                 class="btn btn-primary"
                 target="_blank"
                 >Live Demo</a
@@ -243,7 +239,7 @@
             /></span>
             <div class="portfolio__cta">
               <a
-                href="https://github.com/Yannn001/Mobile-chat-bot-with-memory"
+                href="https://github.com/ChengyanOo/Mobile-chat-bot-with-memory"
                 class="btn"
                 target="_blank"
                 >Github</a
@@ -258,7 +254,7 @@
             /></span>
             <div class="portfolio__cta">
               <a
-                href="https://github.com/Yannn001/Rails-Student-Management-System"
+                href="https://github.com/ChengyanOo/Rails-Student-Management-System"
                 class="btn"
                 target="_blank"
                 >Github</a
@@ -281,15 +277,13 @@
           <ul class="contact__socials">
             <li>
               <a
-                href="https://www.linkedin.com/in/wang-chengyan-1b118b218"
+                href="https://www.linkedin.com/in/w-chengyan-1b118b218/"
                 target="_blank"
                 ><i class="uil uil-linkedin"></i
               ></a>
             </li>
             <li>
-              <a
-                href="https://github.com/Yannn001?tab=repositories"
-                target="_blank"
+              <a href="https://github.com/ChengyanOo" target="_blank"
                 ><i class="uil uil-github-alt"></i
               ></a>
             </li>
