--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <ul class="nav__menu">
           <li><a href="index.html">HOME</a></li>
           <li><a href="#aboutMe">ABOUT ME</a></li>
-          <li><a href="#portfolio">PORTFOLIO</a></li>
+          <li><a href="#portfolio">PROJECTS</a></li>
           <li><a href="#contact">CONTACT</a></li>
           <li>
             <a
@@ -89,11 +89,10 @@
         <div class="header__right">
           <div class="header__image">
             <img
-              src="https://user-images.githubusercontent.com/69735000/211344977-561853c6-1824-4e1e-963d-00f28cde90b2.png"
-              style="width: 56%; margin-left: 80px"
+              src="./images/MRGSelfie.png"
             />
           </div>
-          <div class="header__right-bg"></div>
+          <!-- <div class="header__right-bg"></div>  -->
           <ul class="header__socials">
             <li>
               <a
@@ -265,7 +264,7 @@
       </div>
     </section>
     <!--================== END OF PORTFOLIO =================-->
-    <section id="contact">
+    <!-- <section id="contact">
       <div class="container contact__container">
         <div class="contact__left">
           <h2>Let's Talk</h2>
@@ -304,7 +303,7 @@
           </button>
         </form>
       </div>
-    </section>
+    </section> -->
 
     <footer>
       <small> Copyright &copy; Chengyan Wang's Personal Portfolio </small>
