--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
         <ul class="nav__menu">
           <li><a href="index.html">HOME</a></li>
-          <li><a href="#aboutMe">ABOUT ME</a></li>
+          <!-- <li><a href="#aboutMe">ABOUT ME</a></li> -->
           <li><a href="#portfolio">PROJECTS</a></li>
-          <li><a href="#contact">CONTACT</a></li>
+          <!-- <li><a href="#contact">CONTACT</a></li> -->
           <li>
             <a
               href="./images/Chengyan_Wang_resume.pdf"
