--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               understanding of my capabilities. You can download my resume by
               clicking the button in the top right corner."
             </p> -->
-            <a href="#contact" class="btn btn-primary btn-lg">Get in touch</a>
+            <a id="gravity-button" class="btn btn-primary btn-lg gravity-button">Get in touch</a>
           </div>
         </div>
 
@@ -90,6 +90,7 @@
           <div class="header__image">
             <img
               src="./images/MRGSelfie.png"
+              loading="lazy"
             />
           </div>
           <!-- <div class="header__right-bg"></div>  -->
