--- a/index.html
+++ b/index.html
@@ -60,40 +60,22 @@
             <h3>Hello There! I'm</h3>
             <h1>Chengyan<br />Wang</h1>
             <p>
-              A newly graduated <strong>Full-Stack Web Developer</strong> with a
-              Cum Laude distinction from The Ohio State University, passionate
-              about bridging technology and innovation. Discover my skills,
-              projects, and accomplishments - download my resume from the top
-              right corner!
+              A <strong>Full-Stack Web Developer</strong> with a Cum Laude honor
+              from The Ohio State University, passionate about bridging
+              technology and innovation. Discover my skills, projects, and
+              accomplishments - download my resume from the top right corner!
             </p>
-            <!-- <p>
-              Hi, I'm Chengyan Wang. My experience includes leading full-stack
-              development projects, such as the <b>ICICLE Website</b> and the
-              <b>Rails Student Management System</b>. I implemented cutting-edge
-              technologies and frameworks, including
-              <b>OAuth OpenID protocol</b> , <b>Ruby on Rails</b> , and
-              <b>MVC</b>MVC architecture, showcasing my ability to create
-              secure, user-friendly web platforms.
-            </p>
-            <p>
-              My commitment to seamless user experience and project management
-              underlines my competence in this field. Please feel free to
-              explore my LinkedIn profile and Github account for a deeper
-              understanding of my capabilities. You can download my resume by
-              clicking the button in the top right corner."
-            </p> -->
-            <a id="gravity-button" class="btn btn-primary btn-lg gravity-button">Get in touch</a>
+
+            <a id="gravity-button" class="btn btn-primary btn-lg gravity-button"
+              >Get in touch</a
+            >
           </div>
         </div>
 
         <div class="header__right">
           <div class="header__image">
-            <img
-              src="./images/MRGSelfie.png"
-              loading="lazy"
-            />
+            <img src="./images/MRGSelfie.png" loading="lazy" />
           </div>
-          <!-- <div class="header__right-bg"></div>  -->
           <ul class="header__socials">
             <li>
               <a
@@ -103,9 +85,7 @@
               ></a>
             </li>
             <li>
-              <a
-                href="https://github.com/ChengyanOo"
-                target="_blank"
+              <a href="https://github.com/ChengyanOo" target="_blank"
                 ><i class="uil uil-github-alt"></i
               ></a>
             </li>
@@ -130,15 +110,22 @@
           <h1>Projects</h1>
           <div class="portfolio__head-right">
             <p>
-              Explore my portfolio, showcasing standout projects like the
-              <b>ICICLE Website</b> and the
-              <b>Rails Student Management System</b>. These full-stack
-              development undertakings demonstrate my adept utilization of
-              cutting-edge technologies and frameworks. I've implemented the
-              <b>OAuth OpenID protocol</b>, leveraged <b>Ruby on Rails</b>, and
-              applied <b>MVC architecture</b>, manifesting my competence in
-              creating secure, intuitive web platforms.
+              I have dedicated myself to several impactful projects that
+              demonstrate my commitment to leveraging technology to enhance
+              everyday life for myself and others. My portfolio offers a window
+              into my skills and creativity. A highlight of my work is the
+              <b>ICICLE Website</b> I independently designed and developed for
+              The Ohio State University's ICICLE Lab. This project showcases my
+              comprehensive understanding of various aspects of development,
+              including <b>OAuth user authentication</b>, <b>UI design</b>,
+              <b>UX design</b>, <b>MVC framework</b>, and
+              <b>Django's built-in ORM</b>. Currently, I am working on an
+              exciting Web App, designed to generate live commentary for rock
+              climbers. This innovative application has already undergone
+              initial testing and promises to be a unique contribution to the
+              field.
             </p>
+
             <a href="https://github.com/ChengyanOo"
               >Check out my github <i class="uil uil-arrow-right"></i
             ></a>
@@ -146,6 +133,34 @@
         </div>
 
         <div class="portfolio__projects">
+          <article class="portfolio__project">
+            <a style="font-weight: 600">Rock Climbing App</a>
+            <span class="portfolio__project-image"
+              ><img src="./images/ClimbApp.png"
+            /></span>
+            <div class="portfolio__cta">
+              <a
+                href="https://github.com/ChengyanOo/Climbing-commentary-app"
+                class="btn"
+                target="_blank"
+                >Github</a
+              >
+              <a
+                href="https://www.bilibili.com/video/BV1Jw411Q7A5/?vd_source=23e27ea4c7ee5ec3e49f621b7af77d2e#reply320210307"
+                class="btn btn-primary"
+                target="_blank"
+                style="background-color: brown"
+                >Bilibili videos</a
+              >
+              <a
+                href="https://www.youtube.com/channel/UCqUxXWmgbkFzrJY39j8qQ-w"
+                class="btn btn-primary"
+                target="_blank"
+                style="background-color: brown"
+                >Youtube videos</a
+              >
+            </div>
+          </article>
           <article class="portfolio__project">
             <a style="font-weight: 600"
               >ICICLE Digital Agriculture Build Team Website</a
